--- a/2e.html
+++ b/2e.html
@@ -18,3 +18,14 @@ data.json
     {"id": 3, "title": "jQuery UI", "summary": "Build interactive UI elements"}
   ]
 }
+render.js
+fetch("data.json")
+  .then(res => res.json())
+  .then(data => {
+    const list = document.getElementById("articles");
+    list.innerHTML = data.articles.map(a =>
+      `<li><b>${a.title}</b>: ${a.summary}</li>`
+    ).join("");
+  })
+  .catch(err => console.error("Error loading JSON:", err));
+
